# penhackit

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/: agent.py
cli/: cli.py
config/: config.yaml
data/datasets/: dataset1.jsonl  dataset_encoded.jsonl
data/datasets/old/: dataset_bc_w.json  dataset_bc_windows_large.json
docs/: RUN.md  arch.puml  architecture.puml  loopsession.puml  pyproject-explained.toml  report.puml  sim-pretfm.txt
mvp/: README.md  _kb_monitor.ps1  kb1.json  main copy.py  main.py
mvp/datasets/dataset_20260225_005806_mvp/: dataset.jsonl
mvp/datasets/examples_demo/: dataset copy 3.jsonl
mvp/sessions/session_20260223_205638/: kb.json  session_config.json  session_context.json
mvp/sessions/session_20260223_205845/: session_config.json  session_context.json
mvp/sessions/session_20260223_210053/: session_config.json  session_context.json
mvp/sessions/session_20260223_210908/: session_config.json  session_context.json
mvp/sessions/session_20260223_210932/: session_config.json  session_context.json
mvp/sessions/session_20260223_211551/: session_config.json  session_context.json
mvp/sessions/session_20260223_212147/: session_config.json  session_context.json  steps.jsonl
mvp/sessions/session_20260223_212955/: session_config.json  session_context.json
mvp/sessions/session_20260223_213020/: session_config.json  session_context.json  steps.jsonl
src/penhackit/: __main__.py  main.py
training/: train_bc.py
workspace_old/config/: defaults.yaml  report_defaults.json
workspace_old/models/: policy.pt  policy2.pt
(+401 files in other folders)
